--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,23 @@ rand = "0.5"
 ring = "0.16.20"
 ripemd160 = "0.7"
 rust-base58 = "0.0"
+
 secp256k1 = "0.12"
 snowflake = "1.3"
+
+# Used by the interface feature
+serde = { version = "1.0", features =["derive"], optional = true }
+serde_json = { version = "1.0", optional = true }
+reqwest = { version = "0.11.12", features = ["json"], optional = true }
+anyhow = { version = "1.0.71", optional = true }
+async-mutex = { version = "1.4.0", optional = true }
+
+
 
 [profile.release]
 opt-level = "s"     # Optimize for size over speed
 lto = true          # Enable link-time optimizations to shrink binary
+
+["features"]
+default = []
+interface = ["dep:serde", "dep:serde_json", "dep:reqwest", "dep:anyhow", "dep:async-mutex"]
