--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ serde_json = { version = "1.0", optional = true }
 reqwest = { version = "0.11.12", features = ["json"], optional = true }
 anyhow = { version = "1.0.71", optional = true }
 async-mutex = { version = "1.4.0", optional = true }
+async-trait = { version = "0.1.58", optional = true }
+
 
 
 
@@ -41,4 +43,4 @@ lto = true          # Enable link-time optimizations to shrink binary
 
 ["features"]
 default = []
-interface = ["dep:serde", "dep:serde_json", "dep:reqwest", "dep:anyhow", "dep:async-mutex"]
+interface = ["dep:serde", "dep:serde_json", "dep:reqwest", "dep:anyhow", "dep:async-mutex", "dep:async-trait"]
