--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ secp256k1 = "0.12"
 snowflake = "1.3"
 
 # Used by the interface feature
-serde = { version = "1.0", features =["derive"], optional = true }
+serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0", optional = true }
 reqwest = { version = "0.11.12", features = ["json"], optional = true }
 anyhow = { version = "1.0.71", optional = true }
@@ -42,5 +42,5 @@ opt-level = "s"     # Optimize for size over speed
 lto = true          # Enable link-time optimizations to shrink binary
 
 ["features"]
-default = []
+default = ["dep:serde"]
 interface = ["dep:serde", "dep:serde_json", "dep:reqwest", "dep:anyhow", "dep:async-mutex", "dep:async-trait"]
