--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,12 @@ anyhow = { version = "1.0.71", optional = true }
 async-mutex = { version = "1.4.0", optional = true }
 async-trait = { version = "0.1.58", optional = true }
 
-
+# For python interface
+# pyo3 = { version = "0.21.2", features = ["extension-module"] }
+pyo3 = { version = "0.21.2" }
+[lib]
+name = "chain_gang"
+crate-type = ["cdylib"]
 
 
 [profile.release]
