--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chain-gang"
-version = "0.1.2"
+version = "0.1.3"
 description = "This is a library that enables monitoring of multiple blockchains (BTC, BCH, BSV)."
 # repository = "https://github.com/brentongunning/rust-sv"
 # authors = ["Brenton Gunning <brentongunning@gmail.com>"]
@@ -34,12 +34,12 @@ anyhow = { version = "1.0.71", optional = true }
 async-mutex = { version = "1.4.0", optional = true }
 async-trait = { version = "0.1.58", optional = true }
 
-# For python interface
-# pyo3 = { version = "0.21.2", features = ["extension-module"] }
-pyo3 = { version = "0.21.2" }
+# For python feature
+pyo3 = { version = "0.21.2", optional = true }
+
 [lib]
 name = "chain_gang"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "lib"]
 
 
 [profile.release]
@@ -49,3 +49,4 @@ lto = true          # Enable link-time optimizations to shrink binary
 ["features"]
 default = ["dep:serde"]
 interface = ["dep:serde", "dep:serde_json", "dep:reqwest", "dep:anyhow", "dep:async-mutex", "dep:async-trait"]
+python = ["dep:serde", "dep:pyo3"]
