--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ dynamic = ["version"]
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
-python-source = "python/src/tx_engine"
+python-source = "python/src"
+module-name = "tx_engine.chain_gang"
