--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,6 @@ classifiers = [
 dynamic = ["version"]
 
 [tool.maturin]
-features = ["pyo3/extension-module"]
+features = ["pyo3/extension-module", "python"]
 python-source = "python/src"
 module-name = "tx_engine.chain_gang"
