--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "chain-gang"
 version = "0.2.2"
 description = "This is a library that enables monitoring of multiple blockchains (BTC, BCH, BSV)."
 # repository = "https://github.com/brentongunning/rust-sv"
-authors = ["Brenton Gunning <brentongunning@gmail.com>", "Arthur Gordon <a.gordon@nchain.com>"]
+authors = ["Arthur Gordon <a.gordon@nchain.com>"]
 keywords = ["bitcoin", "sv", "cash", "crypto"]
 license = "MIT"
 edition = "2021"
