--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,18 +14,19 @@ dns-lookup = "2.0.4"
 hex = "0.4.3"
 linked-hash-map = "0.5"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
+
+# Crypto
 murmur3 = "0.5.2"
 num-bigint = "0.4.5"
 num-traits = "0.2"
 rand = "0.8.5"
-# Crypto
 ripemd = "0.1.3"
-rust-base58 = "0.0"
 sha1 = "0.10.6"
 sha2 = "0.10.8"
 secp256k1 = "0.12.2"
 snowflake = "1.3"
 hmac = "0.12.1"
+base58 = "0.2.0"
 
 # Used by the interface feature
 serde = { version = "1.0.86", features = ["derive"], optional = true }
@@ -38,7 +39,8 @@ async-trait = { version = "0.1.58", optional = true }
 # For python feature
 pyo3 = { version = "0.21.2", optional = true }
 regex = "1.10.5"
-lazy_static = "1.4.0"
+lazy_static = "1.5.0"
+
 
 
 [lib]
