--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,9 @@ rand = "0.8.5"
 ripemd = "0.1.3"
 sha1 = "0.10.6"
 sha2 = "0.10.8"
-secp256k1 = "0.12.2"
+secp256k1 = { version = "0.12.2", features = ["serde", "rand"] }
 snowflake = "1.3"
+
 hmac = "0.12.1"
 base58 = "0.2.0"
 
