--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dynamic = ["version"]
 features = ["pyo3/extension-module", "python"]
 python-source = "python/src"
 module-name = "tx_engine"
-sdist-include = ["LICENSE", "python/README.md"]
+sdist-include = ["LICENSE", "README.md"]
 bindings = "pyo3"
 sdist-generator = "cargo"
-readme = "docs/README.md"
+readme = "README.md"
