--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,6 +21,7 @@ permissions:
 jobs:
   linux:
     runs-on: ${{ matrix.platform.runner }}
+    if: "startsWith(github.ref, 'refs/tags/')"
     strategy:
       matrix:
         platform:
@@ -56,6 +57,7 @@ jobs:
 
   windows:
     runs-on: ${{ matrix.platform.runner }}
+    if: "startsWith(github.ref, 'refs/tags/')"
     strategy:
       matrix:
         platform:
@@ -83,6 +85,7 @@ jobs:
 
   macos:
     runs-on: ${{ matrix.platform.runner }}
+    if: "startsWith(github.ref, 'refs/tags/')"
     strategy:
       matrix:
         platform:
@@ -109,6 +112,7 @@ jobs:
 
   sdist:
     runs-on: ubuntu-latest
+    if: "startsWith(github.ref, 'refs/tags/')"
     steps:
       - uses: actions/checkout@v4
       - name: Build sdist
