--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ description = "This is a library that enables monitoring of multiple blockchains
 authors = ["Arthur Gordon <a.gordon@nchain.com>"]
 keywords = ["bitcoin", "sv", "cash", "crypto"]
 license = "MIT"
-license-file = "LICENSE"
 edition = "2021"
 
 [dependencies]
@@ -24,7 +23,8 @@ rand = "0.8.5"
 ripemd = "0.1.3"
 sha1 = "0.10.6"
 sha2 = "0.10.8"
-secp256k1 = { version = "0.12.2", features = ["serde", "rand"] }
+k256 = { version = "0.13.3", features = ["alloc", "arithmetic", "digest", "ecdsa", "once_cell", "pkcs8", "precomputed-tables", "schnorr",
+    "sha2", "sha256", "signature", "std"]}
 snowflake = "1.3"
 
 hmac = "0.12.1"
@@ -42,7 +42,6 @@ async-trait = { version = "0.1.58", optional = true }
 pyo3 = { version = "0.21.2", optional = true }
 regex = "1.10.5"
 lazy_static = "1.5.0"
-
 
 
 [lib]
