--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ dns-lookup = "2.0.4"
 hex = "0.4.3"
 linked-hash-map = "0.5"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
+db-key = "0.0.5"
 
 # Crypto
 murmur3 = "0.5.2"
