--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chain-gang"
-version = "0.5.6"
+version = "0.5.7"
 description = "This is a library that enables monitoring of multiple blockchains (BTC, BCH, BSV)."
 # repository = "https://github.com/brentongunning/rust-sv"
 authors = ["Arthur Gordon <a.gordon@nchain.com>"]
@@ -43,6 +43,7 @@ async-trait = { version = "0.1.58", optional = true }
 pyo3 = { version = "0.21.2", optional = true }
 regex = "1.10.5"
 lazy_static = "1.5.0"
+rand_core = "0.6.4"
 
 
 [lib]
