--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,9 @@ sha2 = "0.10.8"
 k256 = { version = "0.13.3", features = ["alloc", "arithmetic", "digest", "ecdsa", "once_cell", "pkcs8", "precomputed-tables", "schnorr",
     "sha2", "sha256", "signature", "std"]}
 snowflake = "1.3"
-
 hmac = "0.12.1"
 base58 = "0.2.0"
+pbkdf2 = "0.12.2"
 
 # Used by the interface feature
 serde = { version = "1.0.86", features = ["derive"], optional = true }
