--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -64,7 +64,7 @@ jobs:
         working-directory: target/wheels
         env:
           WHEEL_FILE: ${{ steps.find-wheel.stdout }}
-        run: pip install tx-engine --root-user-action=ignore -f file://target/wheels
+        run: pip install tx-engine --root-user-action=ignore -e .
       - name: Python tests
         working-directory: python
         run: ./tests.sh
