--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -53,9 +53,7 @@ jobs:
           toolchain: stable
           cache: true
       - name: Clear wheel dir
-        run: |
-          mkdir target/wheels
-          rm target/wheels/*
+        run: rm target/wheels/*
       - name: Maturin build
         uses: PyO3/maturin-action@v1
         with:
