--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ async-trait = { version = "0.1.83", optional = true }
 
 # For python feature
 pyo3 = { version = "0.22.5", optional = true }
-regex = "1.11.1"
+regex = "^1.5.5"
 lazy_static = "1.5.0"
 rand_core = "0.6.4"
 typenum = "^1.14"
