--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,10 @@ on:
   pull_request:
   workflow_dispatch:
 
+env:
+  PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
+  UNSAFE_PYO3_BUILD_FREE_THREADED: 1
+
 permissions:
   contents: read
 
