--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,14 @@ hex = "0.4.3"
 linked-hash-map = "0.5"
 log = { version = "0.4.26", features = ["max_level_trace", "release_max_level_warn"] }
 db-key = "0.0.5"
+anyhow = { version = "1.0.97"}
+thiserror = "2.0.12"
 
 # Crypto
 murmur3 = "0.5.2"
 num-bigint = "0.4.6"
 num-traits = "0.2"
-rand = "0.8.5"
+rand = "0.8.5"  # Don't bump this unless k256 is updated 
 ripemd = "0.1.3"
 sha1 = "0.10.6"
 sha2 = "0.10.8"
@@ -35,7 +37,6 @@ pbkdf2 = "0.12.2"
 serde = { version = "1.0.219", features = ["derive"], optional = true }
 serde_json = { version = "1.0.140", optional = true }
 reqwest = { version = "0.12.9", features = ["json"], optional = true }
-anyhow = { version = "1.0.97", optional = true }
 async-mutex = { version = "1.4.0", optional = true }
 async-trait = { version = "0.1.87", optional = true }
 
@@ -57,5 +58,5 @@ lto = true          # Enable link-time optimizations to shrink binary
 
 ["features"]
 default = ["dep:serde", "dep:serde_json"]
-interface = ["dep:serde", "dep:serde_json", "dep:reqwest", "dep:anyhow", "dep:async-mutex", "dep:async-trait"]
+interface = ["dep:serde", "dep:serde_json", "dep:reqwest", "dep:async-mutex", "dep:async-trait"]
 python = ["dep:serde", "dep:serde_json", "dep:pyo3"]
