--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,9 @@ hex = "0.4.3"
 linked-hash-map = "0.5"
 log = { version = "0.4.26", features = ["max_level_trace", "release_max_level_warn"] }
 db-key = "0.0.5"
-anyhow = { version = "1.0.97"}
 thiserror = "2.0.12"
+url = "2.5.4"
+
 
 # Crypto
 murmur3 = "0.5.2"
@@ -36,7 +37,7 @@ pbkdf2 = "0.12.2"
 # Used by the interface feature
 serde = { version = "1.0.219", features = ["derive"], optional = true }
 serde_json = { version = "1.0.140", optional = true }
-reqwest = { version = "0.12.9", features = ["json"], optional = true }
+reqwest = { version = "0.12.13", features = ["json"], optional = true }
 async-mutex = { version = "1.4.0", optional = true }
 async-trait = { version = "0.1.87", optional = true }
 
@@ -46,6 +47,7 @@ regex = "^1.5.5"
 lazy_static = "1.5.0"
 rand_core = "0.9.3"
 typenum = "1.9.0"
+
 
 [lib]
 name = "chain_gang"
