--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ dns-lookup = "2.0.4"
 hex = "0.4.3"
 linked-hash-map = "0.5"
 log = { version = "0.4.27", features = ["max_level_trace", "release_max_level_warn"] }
-db-key = "0.0.5"
+db-key = "0.0.5"  # this is a non-trival update
 thiserror = "2.0.12"
 url = "2.5.4"
 
@@ -26,7 +26,7 @@ num-traits = "0.2"
 rand = "0.8.5"  # Don't bump this unless k256 is updated 
 ripemd = "0.1.3"
 sha1 = "0.10.6"
-sha2 = "0.10.8"
+sha2 = "0.10.9"
 k256 = { version = "0.13.4", features = ["alloc", "arithmetic", "digest", "ecdsa", "once_cell", "pkcs8", "precomputed-tables", "schnorr",
     "sha2", "sha256", "signature", "std"]}
 snowflake = "1.3"
@@ -37,12 +37,12 @@ pbkdf2 = "0.12.2"
 # Used by the interface feature
 serde = { version = "1.0.219", features = ["derive"], optional = true }
 serde_json = { version = "1.0.140", optional = true }
-reqwest = { version = "0.12.15", features = ["json"], optional = true }
+reqwest = { version = "0.12.19", features = ["json"], optional = true }
 async-mutex = { version = "1.4.1", optional = true }
 async-trait = { version = "0.1.88", optional = true }
 
 # For python feature
-pyo3 = { version = "0.24.2", optional = true }
+pyo3 = { version = "0.25.0", optional = true }
 regex = "^1.5.5"
 lazy_static = "1.5.0"
 rand_core = "0.9.3"
